--- a/src/main/resources/templates/admin/calculate.html
+++ b/src/main/resources/templates/admin/calculate.html
@@ -47,10 +47,12 @@
     <!-- 회원 관리 테이블 -->
     <div class="w-[1580px] mx-auto mt-[100px]">
         <h1 class="text-3xl font-semibold my-6">정산 관리</h1>
-        <form action="/admin/perform-rebate" method="get">
-            <button type="submit">1개월 동안의 정산 실행</button>
+        <form action="/admin/perform-rebate" method="get" class="text-end mt-8">
+            <button type="submit" class="text-black font-semibold py-2 px-4 rounded-lg shadow-md">
+                1개월 동안의 정산 실행
+            </button>
         </form>
-        <p th:if="${message}" th:text="${message}"></p>
+        <p th:if="${message}" th:text="${message}" class="text-end mt-4 text-green-500"></p>
         <div class="overflow-x-auto">
             <table class="min-w-full">
                 <thead>
