--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -70,7 +70,7 @@
                     </span>
                 </a>
 
-                <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a href="https://reader.grb.asia/" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
                         Book U Luv Reader
                     </span>
