관리자 회원가입 시 권한 ADMIN으로 변경

--- a/src/main/resources/templates/member/admin_signup.html
+++ b/src/main/resources/templates/member/admin_signup.html
@@ -14,7 +14,7 @@
     <div class="max-w-lg w-full px-2 pt-4">
       <h1 class="font-bold text-lg">
         <i class="fa-solid fa-user-plus"></i>
-        관리자 회원가입
+        관리자 회원가입(가입 시 ADMIN 권한이 부여됩니다.)
       </h1>
 
       <form class="flex flex-col gap-3 mt-[50px]" method="POST" th:action="@{/admin/signup}"
