--- a/src/main/resources/templates/member/useageHistory.html
+++ b/src/main/resources/templates/member/useageHistory.html
@@ -268,6 +268,10 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <!-- 아이템이 없는 경우에 대한 처리 -->
+                                <tr th:if="${#lists.isEmpty(cartItemList)}">
+                                    <td colspan="6" class="text-center">장바구니에 아이템이 없습니다.</td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -307,6 +311,10 @@
                                     <td class="text-center" th:text="${order.id}"></td>
                                     <td class="text-center" th:text="${order.product.priceSales}"></td>
                                     <td class="text-center" th:text="${order.createDate}"></td>
+                                </tr>
+                                <!-- 구매내역이 없는 경우에 대한 처리 -->
+                                <tr th:if="${#lists.isEmpty(OrderList)}">
+                                    <td colspan="5" class="text-center">구매내역이 없습니다.</td>
                                 </tr>
                                 </tbody>
                             </table>
