--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -24,6 +24,9 @@
 
 
 
+
+
+
     </style>
 </head>
 
@@ -168,6 +171,9 @@
 
 
 
+
+
+
         </script>
 
         <div class="border-t mt-4 pt-4">
@@ -206,8 +212,9 @@
                       th:action="@{/member/cart/{id}/{productId}(id=${member.id}, productId=${product.id})}"
                       method="post">
                     <div class="flex justify-end w-full mr-[10px]">
-                        <button
-                                class="mr-4 px-4 py-2 w-24 btn btn-primary text-white" type="submit">
+                        <input class="form-control text-center me-3" id="amount" name="amount" type="hidden"
+                               value="1" style="max-width: 3rem"/>
+                        <button class="ml-2 px-4 py-2 w-24 btn btn-primary text-white" type="submit">
                             장바구니
                         </button>
                     </div>
@@ -353,10 +360,6 @@
             alert('수정이 완료되었습니다.');
         }
     });
-
-
-
-
 
 </script>
 </body>
