--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -214,7 +214,7 @@
                     <div class="flex justify-end w-full mr-[10px]">
                         <input class="form-control text-center me-3" id="amount" name="amount" type="hidden"
                                value="1" style="max-width: 3rem"/>
-                        <button class="ml-2 px-4 py-2 w-24 btn btn-primary text-white" type="submit">
+                        <button class="ml-2 mr-4 px-4 py-2 w-24 btn btn-primary text-white" type="submit">
                             장바구니
                         </button>
                     </div>
