발표전 수정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -72,7 +72,7 @@
                     </span>
                 </a>
 
-                <a href="https://reader.grb.asia/" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a href="https://reader.grb.asia/" target="_blank" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
                         Book U Luv Reader
                     </span>
@@ -157,7 +157,7 @@
             <a th:href="@{|/product/list?type=foreign|}" class="hover:text-red-500">
                 외국도서
             </a>
-            <a href="#" class="hover:text-red-500">
+            <a href="https://reader.grb.asia/" target="_blank" class="hover:text-red-500">
                 Book U Luv Reader
             </a>
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
