--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout/layout.html}" xmlns="http://www.w3.org/1999/html"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="">
@@ -15,7 +15,8 @@
     <div class="mx-auto mt-10 max-w-screen-xl">
         <table class="w-full">
             <tbody>
-            <tr th:each="cartItem : ${cartItems}">
+            <!-- 장바구니에 아이템이 있는 경우 -->
+            <tr th:if="${!#lists.isEmpty(cartItems)}" th:each="cartItem : ${cartItems}">
                 <td>
                     <div class="flex items-center justify-center w-1/7">
                         <input type="checkbox" class="w-[20px] h-[20px]">
@@ -46,14 +47,24 @@
                     </div>
                 </td>
             </tr>
+            <!-- 장바구니가 비어있는 경우 -->
+            <tr th:unless="${!#lists.isEmpty(cartItems)}">
+                <td colspan="7" class="text-center py-4">
+                    장바구니가 비어있습니다.
+                </td>
+            </tr>
             </tbody>
         </table>
         <div class="border-t mt-4 pt-4"></div>
+        <!-- 구매내역 버튼 등의 내용 생략 -->
         <div class="mt-[20px] flex justify-end w-full">
+            <a href="javascript:history.back()" class="btn btn-secondary text-white mr-4">뒤로가기(쇼핑 계속하기)</a>
             <form th:action="@{/order/detail}">
-                <input type="hidden" name="productsId" th:value="${cartItems[0].product.id}">
-                <input type="submit" value="구매" class="btn btn-primary text-white">
+                <input type="hidden" name="productsId" th:value="${cartItems[0].product.id}" th:if="${!#lists.isEmpty(cartItems)}">
+                <input type="submit" value="구매" class="btn btn-primary text-white" th:if="${!#lists.isEmpty(cartItems)}">
             </form>
+            <!-- 뒤로가기 버튼 항상 표시 -->
+
         </div>
     </div>
 </div>
