--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -73,9 +73,9 @@
                 </a>
 
                 <a href="https://reader.grb.asia/" target="_blank" class="inline-flex hover:text-red-500 flex-shrink-0">
-                    <span class="ml-[2px] hidden lg:block">
-                        Book U Luv Reader
-                    </span>
+                    <span class="text-[#1E9EFE] ml-[2px] hidden lg:block">BOOK</span>
+                    <span class="ml-[2px] hidden lg:block">U_LUV</span>
+                    <span class="ml-[2px] hidden lg:block">Reader</span>
                 </a>
             </div>
         </div>
@@ -158,7 +158,7 @@
                 외국도서
             </a>
             <a href="https://reader.grb.asia/" target="_blank" class="hover:text-red-500">
-                Book U Luv Reader
+                Reader
             </a>
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
