--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -37,7 +37,7 @@
     </table>
     <div class="border-b-2 border-black my-8"></div>
     <div class="bg-white p-8 rounded shadow-md flex justify-center">
-        <div class="notice-content w-[800px] whitespace-pre-line break-words">
+        <div class="notice-content w-[800px] break-words">
             <span th:text="${notice.content}"></span>
         </div>
     </div>
