--- a/src/main/resources/templates/admin/calculate.html
+++ b/src/main/resources/templates/admin/calculate.html
@@ -36,9 +36,6 @@
                         <li>
                             <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
                         </li>
-                        <li>
-                            <a class="menu-link" th:href="@{/product/create}">제품 등록</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -48,11 +45,11 @@
     <div class="w-[1580px] mx-auto mt-[100px]">
         <h1 class="text-3xl font-semibold my-6">정산 관리</h1>
         <form action="/admin/perform-rebate" method="get" class="text-end mt-8">
-            <button type="submit" class="text-black font-semibold py-2 px-4 rounded-lg shadow-md">
+            <button type="submit" class="text-white btn-primary font-semibold py-2 px-4 rounded-lg shadow-md mb-4">
                 1개월 동안의 정산 실행
             </button>
         </form>
-        <p th:if="${message}" th:text="${message}" class="text-end mt-4 text-green-500"></p>
+        <p th:if="${message}" th:text="${message}" class="text-end text-black"></p>
         <div class="overflow-x-auto">
             <table class="min-w-full">
                 <thead>
