--- a/src/main/resources/templates/admin/domestic.html
+++ b/src/main/resources/templates/admin/domestic.html
@@ -3,14 +3,14 @@
       xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        name="viewport">
-  <meta content="ie=edge" http-equiv="X-UA-Compatible">
-  <title>관리자 페이지</title>
-  <!-- 테일윈드 스타일시트 링크 추가 -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
-  <style>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>관리자 페이지</title>
+    <!-- 테일윈드 스타일시트 링크 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <style>
         .truncate-500 {
             max-width: 500px;
             white-space: nowrap;
@@ -28,140 +28,153 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
-  </style>
+
+    </style>
 </head>
 <body>
 
 <main layout:fragment="content">
-  <header class="w-[1580px] mx-auto p-4 text-left border-b">
-    <div class="flex justify-between items-center">
-      <h1 class="text-[50px]">관리자 페이지</h1>
-      <div class="menu">
-        <div class="admin_menu flex space-x-4">
-          <ul class="flex space-x-4">
-            <li>
-              <a class="menu-link" th:href="@{/admin/member}">회원관리</a>
-            </li>
-            <li>
-              <a class="menu-link" th:href="@{/admin/notice}">공지사항 관리</a>
-            </li>
-            <li>
-              <a class="menu-link" th:href="@{/admin/domestic}">국내도서 관리</a>
-            </li>
-            <li>
-              <a class="menu-link" th:href="@{/admin/foreign}">외국도서 관리</a>
-            </li>
-            <li>
-              <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
-            </li>
-            <li>
-              <a class="menu-link" th:href="@{/product/create}">제품 등록</a>
-            </li>
-          </ul>
+    <header class="w-[1580px] mx-auto p-4 text-left border-b">
+        <div class="flex justify-between items-center">
+            <h1 class="text-[50px]">관리자 페이지</h1>
+            <div class="menu">
+                <div class="admin_menu flex space-x-4">
+                    <ul class="flex space-x-4">
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/member}">회원관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/notice}">공지사항 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/domestic}">국내도서 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/foreign}">외국도서 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-    <!-- ... -->
-  </header>
+        <!-- ... -->
+    </header>
 
-  <!-- 판매글 관리 테이블 -->
-  <div class="w-[1580px] mx-auto mt-[100px]">
-    <h1 class="text-3xl font-semibold mt-8 mb-4">국내 도서 관리</h1>
-    <div class="search_box flex items-center justify-end my-8">
-      <select id="dropdown" class="p-2 border rounded">
-        <option value="all">제목 + 내용</option>
-        <option value="title">제목</option>
-        <option value="content">내용</option>
-      </select>
-      <input type="text" id="search_kw" class="p-2 border rounded mx-2" placeholder="검색어를 입력하세요">
-      <button type="button" id="btn_search" class="p-2 border transition duration-300 hover:bg-gray-200">검색</button>
+    <!-- 판매글 관리 테이블 -->
+    <div class="w-[1580px] mx-auto mt-[100px]">
+        <h1 class="text-3xl font-semibold mt-8 mb-4">국내 도서 관리</h1>
+        <div class="search_box flex items-center justify-between my-8">
+            <div>
+                <a href="/product/create"
+                   class="inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                    제품 등록
+                </a>
+            </div>
+            <div>
+                <select id="dropdown" class="p-2 border rounded">
+                    <option value="all">제목 + 내용</option>
+                    <option value="title">제목</option>
+                    <option value="content">내용</option>
+                </select>
+                <input type="text" id="search_kw" class="p-2 border rounded mx-2" placeholder="검색어를 입력하세요">
+                <button type="button" id="btn_search" class="p-2 border transition duration-300 hover:bg-gray-200">검색
+                </button>
+            </div>
+        </div>
+        <div class="overflow-x-auto">
+            <table class="min-w-full">
+                <thead>
+                <tr>
+                    <th class="py-2 px-4 w-auto border">NO.</th>
+                    <th class="py-2 px-4 w-auto border">제목</th>
+                    <th class="py-2 px-4 w-auto border">작가</th>
+                    <th class="py-2 px-4 w-auto border">출판일</th>
+                    <th class="py-2 px-4 w-auto border">출판사</th>
+                    <th class="py-2 px-4 w-auto border">수정</th>
+                    <th class="py-2 px-4 w-auto border">삭제</th>
+                </tr>
+                </thead>
+                <tbody th:if="${products}">
+                <tr class="bg-white" th:each="product, loop : ${products}">
+                    <td class="py-2 px-4 border">
+                        <a href="javascript:void(0);" class="book-link" data-id="${product.id}"
+                           th:text="${products.getTotalElements() - (products.getNumber() * products.getSize()) - loop.index}"
+                           th:attr="data-id=${product.id}"></a>
+                    </td>
+                    <td class="py-2 px-4 border truncate-500">
+                        <a href="javascript:void(0);" class="book-link" data-id="${product.id}"
+                           th:text="${product.title}" th:attr="data-id=${product.id}"></a>
+                    </td>
+                    <td class="py-2 px-4 border truncate-300">
+                        <a href="javascript:void(0);" class="book-link" data-id="${product.id}"
+                           th:text="${product.author}" th:attr="data-id=${product.id}"></a>
+                    </td>
+                    <td class="py-2 px-4 border truncate-300">
+                        <a href="javascript:void(0);" class="book-link" data-id="${product.id}"
+                           th:text="${product.pubDate}" th:attr="data-id=${product.id}"></a>
+                    </td>
+                    <td class="py-2 px-4 border" th:text="${product.publisher}">
+                        <a href="javascript:void(0);" class="book-link" data-id="${product.id}"
+                           th:text="${product.publisher}" th:attr="data-id=${product.id}"></a>
+                    </td>
+                    <td class="py-2 px-4 border">
+                        <!-- 수정/삭제 버튼 -->
+                        <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
+                           href="javascript:void(0);"
+                           th:data-uri="@{/product/modify/{id}(id=${product.id})}"
+                           class="text-blue-500 hover:text-blue-600 transition duration-300 mr-2"
+                           onclick="confirmEdit(event)">수정</a>
+                    </td>
+                    <td class="py-2 px-4 border">
+                        <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
+                           href="javascript:void(0);"
+                           th:data-uri="@{/product/delete/{id}(id=${product.id})}"
+                           class="text-red-500 hover:text-red-600 transition duration-300"
+                           onclick="confirmDelete(event)">삭제</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="overflow-x-auto">
-      <table class="min-w-full">
-        <thead>
-        <tr>
-          <th class="py-2 px-4 w-auto border">NO.</th>
-          <th class="py-2 px-4 w-auto border">제목</th>
-          <th class="py-2 px-4 w-auto border">작가</th>
-          <th class="py-2 px-4 w-auto border">출판일</th>
-          <th class="py-2 px-4 w-auto border">출판사</th>
-          <th class="py-2 px-4 w-auto border">수정</th>
-          <th class="py-2 px-4 w-auto border">삭제</th>
-        </tr>
-        </thead>
-        <tbody th:if="${products}">
-        <tr class="bg-white" th:each="product, loop : ${products}">
-          <td class="py-2 px-4 border">
-            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${products.getTotalElements() - (products.getNumber() * products.getSize()) - loop.index}" th:attr="data-id=${product.id}"></a>
-          </td>
-          <td class="py-2 px-4 border truncate-500">
-            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.title}" th:attr="data-id=${product.id}"></a>
-          </td>
-          <td class="py-2 px-4 border truncate-300">
-            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.author}" th:attr="data-id=${product.id}"></a>
-          </td>
-          <td class="py-2 px-4 border truncate-300">
-            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.pubDate}" th:attr="data-id=${product.id}"></a>
-          </td>
-          <td class="py-2 px-4 border" th:text="${product.publisher}">
-            <a href="javascript:void(0);" class="book-link" data-id="${product.id}" th:text="${product.publisher}" th:attr="data-id=${product.id}"></a>
-          </td>
-          <td class="py-2 px-4 border">
-            <!-- 수정/삭제 버튼 -->
-            <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
-               href="javascript:void(0);"
-               th:data-uri="@{/product/modify/{id}(id=${product.id})}"
-               class="text-blue-500 hover:text-blue-600 transition duration-300 mr-2"
-               onclick="confirmEdit(event)">수정</a>
-          </td>
-          <td class="py-2 px-4 border">
-            <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
-               href="javascript:void(0);"
-               th:data-uri="@{/product/delete/{id}(id=${product.id})}"
-               class="text-red-500 hover:text-red-600 transition duration-300"
-               onclick="confirmDelete(event)">삭제</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+
+    <!-- 페이지네이션 -->
+    <div th:if="${!products.isEmpty()}">
+        <div class="flex justify-center mt-4">
+            <ul class="flex list-reset border border-gray-300 rounded">
+                <li class="page-item hover:bg-gray-200"
+                    th:classappend="${!products.hasPrevious()} ? 'disabled'">
+                    <a class="page-link px-3 py-2 block text-center" href="javascript:void(0)"
+                       th:data-page="${products.number}">
+                        <span><</span>
+                    </a>
+                </li>
+                <li class="page-item" th:each="page: ${#numbers.sequence(1, products.totalPages)}"
+                    th:if="${page >= products.number-5 and page <= products.number+5}">
+                    <a class="page-link block text-center px-3 py-2 hover:bg-gray-200"
+                       href="javascript:void(0)" th:classappend="${page == products.number+1} ? 'bg-blue-300'"
+                       th:data-page="${page}">
+                        <span th:text="${page}"></span>
+                    </a>
+                </li>
+                <li class="page-item hover:bg-gray-200" th:classappend="${!products.hasNext()} ? 'disabled'">
+                    <a class="page-link px-3 py-2 block text-center" href="javascript:void(0)"
+                       th:data-page="${products.number+2}">
+                        <span>></span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 
-  <!-- 페이지네이션 -->
-  <div th:if="${!products.isEmpty()}">
-    <div class="flex justify-center mt-4">
-      <ul class="flex list-reset border border-gray-300 rounded">
-        <li class="page-item hover:bg-gray-200"
-            th:classappend="${!products.hasPrevious()} ? 'disabled'">
-          <a class="page-link px-3 py-2 block text-center" href="javascript:void(0)"
-             th:data-page="${products.number}">
-            <span><</span>
-          </a>
-        </li>
-        <li class="page-item" th:each="page: ${#numbers.sequence(1, products.totalPages)}"
-            th:if="${page >= products.number-5 and page <= products.number+5}">
-          <a class="page-link block text-center px-3 py-2 hover:bg-gray-200"
-             href="javascript:void(0)" th:classappend="${page == products.number+1} ? 'bg-blue-300'"
-             th:data-page="${page}">
-            <span th:text="${page}"></span>
-          </a>
-        </li>
-        <li class="page-item hover:bg-gray-200" th:classappend="${!products.hasNext()} ? 'disabled'">
-          <a class="page-link px-3 py-2 block text-center" href="javascript:void(0)"
-             th:data-page="${products.number+2}">
-            <span>></span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+    <form id="searchForm" method="get" th:action="@{/admin/domestic}">
+        <input id="kw" name="kw" th:value="${kw}" type="hidden">
+        <input id="page" name="page" th:value="${products.number}" type="hidden">
+    </form>
 
-  <form id="searchForm" method="get" th:action="@{/admin/domestic}">
-    <input id="kw" name="kw" th:value="${kw}" type="hidden">
-    <input id="page" name="page" th:value="${products.number}" type="hidden">
-  </form>
-
-  <script layout:fragment="script" type="text/javascript">
+    <script layout:fragment="script" type="text/javascript">
     const page_elements = document.getElementsByClassName("page-link");
     Array.from(page_elements).forEach(function(element) {
         element.addEventListener('click', function() {
@@ -203,7 +216,8 @@
             });
         });
     });
-  </script>
+
+    </script>
 </main>
 </body>
 </html>
