--- a/src/main/resources/templates/admin/foreign.html
+++ b/src/main/resources/templates/admin/foreign.html
@@ -54,9 +54,6 @@
             <li>
               <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
             </li>
-            <li>
-              <a class="menu-link" th:href="@{/product/create}">제품 등록</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -67,14 +64,23 @@
   <!-- 판매글 관리 테이블 -->
   <div class="w-[1580px] mx-auto mt-[100px]">
     <h1 class="text-3xl font-semibold mt-8 mb-4">외국 도서 관리</h1>
-    <div class="search_box flex items-center justify-end my-8">
-      <select id="dropdown" class="p-2 border rounded">
-        <option value="all">제목 + 내용</option>
-        <option value="title">제목</option>
-        <option value="content">내용</option>
-      </select>
-      <input type="text" id="search_kw" class="p-2 border rounded mx-2" placeholder="검색어를 입력하세요">
-      <button type="button" id="btn_search" class="p-2 border transition duration-300 hover:bg-gray-200">검색</button>
+    <div class="search_box flex items-center justify-between my-8">
+      <div>
+        <a href="/product/create"
+           class="inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          제품 등록
+        </a>
+      </div>
+      <div>
+        <select id="dropdown" class="p-2 border rounded">
+          <option value="all">제목 + 내용</option>
+          <option value="title">제목</option>
+          <option value="content">내용</option>
+        </select>
+        <input type="text" id="search_kw" class="p-2 border rounded mx-2" placeholder="검색어를 입력하세요">
+        <button type="button" id="btn_search" class="p-2 border transition duration-300 hover:bg-gray-200">검색
+        </button>
+      </div>
     </div>
     <div class="overflow-x-auto">
       <table class="min-w-full">
