--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -46,8 +46,24 @@
         <div class="flex justify-between">
             <h1 class="text-3xl font-semibold mt-8 mb-4">공지사항 관리</h1>
         </div>
+        <div class="search_box flex items-center justify-between my-8">
+            <div class="flex justify-end my-4">
+                <a th:href="@{/notice/create}"
+                   class="btn btn-primer btn-outline">글쓰기</a>
+            </div>
+            <div>
+                <select id="dropdown" class="p-2 border rounded">
+                    <option value="all">제목 + 내용</option>
+                    <option value="title">제목</option>
+                    <option value="content">내용</option>
+                </select>
+                <input type="text" id="search_kw" class="p-2 border rounded mx-2" placeholder="검색어를 입력하세요">
+                <button type="button" id="btn_search" class="p-2 border transition duration-300 hover:bg-gray-200">검색
+                </button>
+            </div>
+        </div>
         <div class="overflow-x-auto">
-            <table class="min-w-full">
+            <table class="min-w-full text-center">
                 <thead>
                 <tr>
                     <th class="py-2 px-4 w-auto border">NO.</th>
@@ -55,22 +71,80 @@
                     <th class="py-2 px-4 w-auto border">작성자</th>
                     <th class="py-2 px-4 w-auto border">작성일자</th>
                     <th class="py-2 px-4 w-auto border">수정일자</th>
+                    <th class="py-2 px-4 w-auto border">수정 / 삭제</th>
+
                 </tr>
                 </thead>
                 <tbody>
                 <tr class="bg-white" th:each="notice : ${noticeList}">
                     <td class="py-2 px-4 border" th:text="${notice.id}"></td>
-                    <td class="py-2 px-4 border max-w-lg whitespace-pre-line break-words" th:text="${notice.subject}"></td>
+                    <td class="py-2 px-4 border max-w-lg break-words" th:text="${notice.subject}"></td>
                     <td class="py-2 px-4 border" th:text="${notice.noticeRegister.nickName}"></td>
                     <td class="py-2 px-4 border" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></td>
                     <td class="py-2 px-4 border" th:unless="${notice.modifyDate != null}">-</td>
                     <td class="py-2 px-4 border" th:text="${#temporals.format(notice.modifyDate, 'yyyy-MM-dd HH:mm')}"
                         th:if="${notice.modifyDate != null}"></td>
+                    <td class="py-2 px-4 border">
+                        <!-- 수정/삭제 버튼 -->
+                        <a href="javascript:void(0);"
+                           th:data-uri="@{/notice/modify/{id}(id=${notice.id})}"
+                           class="text-blue-500 hover:text-blue-600 transition duration-300 mr-2"
+                           onclick="confirmEdit(event)">수정</a>
+
+                        <a href="javascript:void(0);"
+                           th:data-uri="@{/notice/delete/{id}(id=${notice.id})}"
+                           class="text-red-500 hover:text-red-600 transition duration-300"
+                           onclick="confirmDelete(event)">삭제</a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
+    <script layout:fragment="script" type="text/javascript">
+    const page_elements = document.getElementsByClassName("page-link");
+    Array.from(page_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            document.getElementById('page').value = this.dataset.page;
+            document.getElementById('searchForm').submit();
+        });
+    });
+    const btn_search = document.getElementById("btn_search");
+    btn_search.addEventListener('click', function() {
+        document.getElementById('kw').value = document.getElementById('search_kw').value;
+        document.getElementById('page').value = 1;
+        document.getElementById('searchForm').submit();
+    });
+      function confirmDelete(event) {
+        event.preventDefault();
+        if (confirm("정말로 삭제하시겠습니까?\n삭제된 도서는 되돌릴 수 없습니다.")) {
+            location.href = event.target.getAttribute("data-uri");
+            alert('삭제가 완료되었습니다.');
+        }
+    }
+    function confirmEdit(event) {
+        event.preventDefault();
+        if (confirm("정말로 수정하시겠습니까?")) {
+            location.href = event.target.getAttribute("data-uri");
+        }
+    }
+    $(document).ready(function() {
+        $(".book-link").click(function() {
+            var productId = $(this).data("id");
+            $.ajax({
+                type: "POST",
+                url: "/product/increase-hit",
+                data: { id: productId },
+                success: function(response) {
+                    if (response === "success") {
+                        window.location.href = "/product/detail/" + productId;
+                    }
+                }
+            });
+        });
+    });
+
+    </script>
 </main>
 </body>
 </html>
