--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
             </div>
-            <!-- ... -->
+        </div>
     </header>
     <!-- 회원 관리 테이블 -->
     <div class="w-[1580px] mx-auto mt-[100px]">
@@ -60,12 +60,14 @@
                 <tbody>
                 <tr class="bg-white" th:each="notice : ${noticeList}">
                     <td class="py-2 px-4 border" th:text="${notice.id}"></td>
-                    <td class="py-2 px-4 border max-w-lg whitespace-pre-line break-words" th:text="${notice.subject}"></td>
+                    <td class="py-2 px-4 border max-w-lg whitespace-pre-line break-words"
+                        th:text="${notice.subject}"></td>
                     <td class="py-2 px-4 border" th:text="${notice.noticeRegister.nickName}"></td>
-                    <td class="py-2 px-4 border" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+                    <td class="py-2 px-4 border"
+                        th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></td>
                     <td class="py-2 px-4 border" th:unless="${notice.modifyDate != null}">-</td>
-                    <td class="py-2 px-4 border" th:text="${#temporals.format(notice.modifyDate, 'yyyy-MM-dd HH:mm')}"
-                        th:if="${notice.modifyDate != null}"></td>
+                    <td class="py-2 px-4 border" th:if="${notice.modifyDate != null}"
+                        th:text="${#temporals.format(notice.modifyDate, 'yyyy-MM-dd HH:mm')}"></td>
                 </tr>
                 </tbody>
             </table>
