--- a/src/main/resources/templates/product/product_form.html
+++ b/src/main/resources/templates/product/product_form.html
@@ -82,6 +82,10 @@
             </div>
         </div>
 
+        <div class="mb-2">
+            <span>ISBN : </span>
+            <span th:text="${product.isbn}"></span>
+        </div>
         <div class="border-t mt-4 pt-4">
             <label>상품정보 및 내용</label>
         </div>
