--- a/src/main/resources/templates/member/admin_signup.html
+++ b/src/main/resources/templates/member/admin_signup.html
@@ -61,7 +61,7 @@
                     function sendEmailConfirmation() {
                       var email = $("#userName").val();
                       $.ajax({
-                        url: "http://localhost:7070/mailCheck",
+                        url: "https://www.bookuluv.devh.me/mailCheck",
                         method: "GET",
                         data: {
                           email: email
