--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -38,7 +38,7 @@
     <div class="border-b-2 border-black my-8"></div>
     <div class="bg-white p-8 rounded shadow-md">
         <div class="notice-content break-words">
-            <span th:text="${notice.content}"></span>
+            <span th:utext="${notice.content}"></span>
         </div>
     </div>
     <div class="border-b-2 border-black w-full mt-8"></div>
